--- a/_posts/2024-04-30-お姉ちゃんは串刺し公! ～アタシの杭で貫いてあげる～Sakura.md
+++ b/_posts/2024-04-30-お姉ちゃんは串刺し公! ～アタシの杭で貫いてあげる～Sakura.md
@@ -7,6 +7,8 @@ categories: AI translation
 ---
 
 
+请务必阅读文件中的README.md中的使用说明。如有运行问题 or bug反馈，请使用页面下方的邮箱联系我。
+
 ## 机翻补丁文件：
 
 [お姉ちゃんは串刺し公! ～アタシの杭で貫いてあげる～Sakura.rar](../resources/%E3%81%8A%E5%A7%89%E3%81%A1%E3%82%83%E3%82%93%E3%81%AF%E4%B8%B2%E5%88%BA%E3%81%97%E5%85%AC%21%20%EF%BD%9E%E3%82%A2%E3%82%BF%E3%82%B7%E3%81%AE%E6%9D%AD%E3%81%A7%E8%B2%AB%E3%81%84%E3%81%A6%E3%81%82%E3%81%92%E3%82%8B%EF%BD%9ESakura.rar)
