--- a/_posts/2024-06-21-麗佳牝犬調教 ～××に犯されて…～sakura-14b.md
+++ b/_posts/2024-06-21-麗佳牝犬調教 ～××に犯されて…～sakura-14b.md
@@ -7,6 +7,8 @@ categories: AI translation
 ---
 
 
+请务必阅读文件中的README.md中的使用说明。如有运行问题 or bug反馈，请使用页面下方的邮箱联系我。
+
 ## 机翻补丁文件：
 
 [麗佳牝犬調教 ～××に犯されて…～sakura-14b.rar](../resources/%E9%BA%97%E4%BD%B3%E7%89%9D%E7%8A%AC%E8%AA%BF%E6%95%99%20%EF%BD%9E%C3%97%C3%97%E3%81%AB%E7%8A%AF%E3%81%95%E3%82%8C%E3%81%A6%E2%80%A6%EF%BD%9Esakura-14b.rar)
