--- a/_posts/2024-07-11-少女狩りSakura-32B.md
+++ b/_posts/2024-07-11-少女狩りSakura-32B.md
@@ -7,6 +7,8 @@ categories: AI translation
 ---
 
 
+请务必阅读文件中的README.md中的使用说明。如有运行问题 or bug反馈，请使用页面下方的邮箱联系我。
+
 ## 机翻补丁文件：
 
 [少女狩りSakura-32B.rar](../resources/%E5%B0%91%E5%A5%B3%E7%8B%A9%E3%82%8ASakura-32B.rar)
