--- a/_posts/2024-09-22-月光に濡れる教室で、僕は。gpt-4o.md
+++ b/_posts/2024-09-22-月光に濡れる教室で、僕は。gpt-4o.md
@@ -7,6 +7,8 @@ categories: AI translation
 ---
 
 
+请务必阅读文件中的README.md中的使用说明。如有运行问题 or bug反馈，请使用页面下方的邮箱联系我。
+
 ## 机翻补丁文件：
 
 [月光に濡れる教室で、僕は。gpt-4o.rar](../resources/%E6%9C%88%E5%85%89%E3%81%AB%E6%BF%A1%E3%82%8C%E3%82%8B%E6%95%99%E5%AE%A4%E3%81%A7%E3%80%81%E5%83%95%E3%81%AF%E3%80%82gpt-4o.rar)
