--- a/_posts/2024-09-24-花散峪山人考 gpt4o.md
+++ b/_posts/2024-09-24-花散峪山人考 gpt4o.md
@@ -7,6 +7,8 @@ categories: AI translation
 ---
 
 
+请务必阅读文件中的README.md中的使用说明。如有运行问题 or bug反馈，请使用页面下方的邮箱联系我。
+
 ## 机翻补丁文件：
 
 [花散峪山人考 gpt4o.rar](../resources/%E8%8A%B1%E6%95%A3%E5%B3%AA%E5%B1%B1%E4%BA%BA%E8%80%83%20gpt4o.rar)
