--- a/_posts/2024-10-03-CRAVE×10 gpt4o.md
+++ b/_posts/2024-10-03-CRAVE×10 gpt4o.md
@@ -7,6 +7,8 @@ categories: AI translation
 ---
 
 
+请务必阅读文件中的README.md中的使用说明。如有运行问题 or bug反馈，请使用页面下方的邮箱联系我。
+
 ## 机翻补丁文件：
 
 [CRAVE×10 gpt4o.rar](../resources/CRAVE%C3%9710%20gpt4o.rar)
