--- a/_posts/2024-06-23-魔法の守護姫アルテミナsakura-14b.md
+++ b/_posts/2024-06-23-魔法の守護姫アルテミナsakura-14b.md
@@ -15,3 +15,15 @@ categories: AI translation
 
  
 
+## 相关链接：
+
+[サマナープリンセス アルテミナ2 ～戦え！アポローグ～sakura](../games/17)
+
+ 
+
+[サマナープリンセス アルテミナ3 ～二人の有紗～sakura](../games/18)
+
+ 
+
+通过RSS订阅以下链接，获取补丁发布/更新通知：https://jyxjyx1234.github.io/feed.xml
+
