--- a/_posts/2024-06-24-なつくもゆるる 姬佳追加场景补丁及Sakura32b翻译.md
+++ b/_posts/2024-06-24-なつくもゆるる 姬佳追加场景补丁及Sakura32b翻译.md
@@ -15,3 +15,11 @@ categories: AI translation
 
  
 
+## 相关链接：
+
+[なつくもゆるる 紫穂追加场景补丁及Sakura翻译补丁](../games/7)
+
+ 
+
+通过RSS订阅以下链接，获取补丁发布/更新通知：https://jyxjyx1234.github.io/feed.xml
+
