--- a/_posts/2024-07-20-借金姉妹2 Sakura32b.md
+++ b/_posts/2024-07-20-借金姉妹2 Sakura32b.md
@@ -15,3 +15,11 @@ categories: AI translation
 
  
 
+## 相关链接：
+
+[借金姉妹Sakura32b](../games/23)
+
+ 
+
+通过RSS订阅以下链接，获取补丁发布/更新通知：https://jyxjyx1234.github.io/feed.xml
+
