--- a/_posts/2024-10-22-露出調教同好会2 gpt4o.md
+++ b/_posts/2024-10-22-露出調教同好会2 gpt4o.md
@@ -15,3 +15,11 @@ categories: AI translation
 
  
 
+## 相关链接：
+
+[露出調教同好会 gpt4o](../games/65)
+
+ 
+
+通过RSS订阅以下链接，获取补丁发布/更新通知：https://jyxjyx1234.github.io/feed.xml
+
