--- a/_posts/2024-12-02-星辰恋曲的白色永恒 FHD 汉化补丁移植.md
+++ b/_posts/2024-12-02-星辰恋曲的白色永恒 FHD 汉化补丁移植.md
@@ -21,6 +21,10 @@ categories: AI translation
 
  
 
+[白永 FHD 汉化版存档路径修正](../resources/白永 FHD 汉化版存档路径修正 .7z)
+
+ 
+
 通过RSS订阅以下链接，获取补丁发布/更新通知：https://jyxjyx1234.github.io/feed.xml
 
 ## 友情广告——要来只小鸟FUMO吗
