--- a/_posts/2024-06-27-サマナープリンセス アルテミナ3 ～二人の有紗～sakura.md
+++ b/_posts/2024-06-27-サマナープリンセス アルテミナ3 ～二人の有紗～sakura.md
@@ -9,7 +9,7 @@ categories: AI translation
 
 请务必阅读文件中的README.md中的使用说明。如有运行问题 or bug反馈，请使用页面下方的邮箱联系我。
 
-## 机翻补丁文件：
+## 补丁文件：
 
 [サマナープリンセス アルテミナ3 ～二人の有紗～sakura.rar](../resources/%E3%82%B5%E3%83%9E%E3%83%8A%E3%83%BC%E3%83%97%E3%83%AA%E3%83%B3%E3%82%BB%E3%82%B9%20%E3%82%A2%E3%83%AB%E3%83%86%E3%83%9F%E3%83%8A3%20%EF%BD%9E%E4%BA%8C%E4%BA%BA%E3%81%AE%E6%9C%89%E7%B4%97%EF%BD%9Esakura.rar)
 
