--- a/_posts/2024-10-22-露出調教同好会2 gpt4o.md
+++ b/_posts/2024-10-22-露出調教同好会2 gpt4o.md
@@ -9,7 +9,7 @@ categories: AI translation
 
 请务必阅读文件中的README.md中的使用说明。如有运行问题 or bug反馈，请使用页面下方的邮箱联系我。
 
-## 机翻补丁文件：
+## 补丁文件：
 
 [露出調教同好会2 gpt4o.rar](../resources/%E9%9C%B2%E5%87%BA%E8%AA%BF%E6%95%99%E5%90%8C%E5%A5%BD%E4%BC%9A2%20gpt4o.rar)
 
