--- a/_posts/2024-05-31-なつくもゆるる 紫穂追加场景补丁及Sakura翻译补丁.md
+++ b/_posts/2024-05-31-なつくもゆるる 紫穂追加场景补丁及Sakura翻译补丁.md
@@ -9,7 +9,7 @@ categories: AI translation
 
 请务必阅读文件中的README.md中的使用说明。如有运行问题 or bug反馈，请使用页面下方的邮箱联系我。
 
-## 机翻补丁文件：
+## 补丁文件：
 
 [なつくもゆるる 紫穂追加场景补丁及Sakura翻译补丁.rar](../resources/%E3%81%AA%E3%81%A4%E3%81%8F%E3%82%82%E3%82%86%E3%82%8B%E3%82%8B%20%E7%B4%AB%E7%A9%82%E8%BF%BD%E5%8A%A0%E5%9C%BA%E6%99%AF%E8%A1%A5%E4%B8%81%E5%8F%8ASakura%E7%BF%BB%E8%AF%91%E8%A1%A5%E4%B8%81.rar)
 
