--- a/_posts/2024-06-09-こいなか -小田舎で初恋×中出しセクシャルライフ-SAKURA.md
+++ b/_posts/2024-06-09-こいなか -小田舎で初恋×中出しセクシャルライフ-SAKURA.md
@@ -9,7 +9,7 @@ categories: AI translation
 
 请务必阅读文件中的README.md中的使用说明。如有运行问题 or bug反馈，请使用页面下方的邮箱联系我。
 
-## 机翻补丁文件：
+## 补丁文件：
 
 [こいなか -小田舎で初恋×中出しセクシャルライフ-SAKURA.rar](../resources/%E3%81%93%E3%81%84%E3%81%AA%E3%81%8B%20-%E5%B0%8F%E7%94%B0%E8%88%8E%E3%81%A7%E5%88%9D%E6%81%8B%C3%97%E4%B8%AD%E5%87%BA%E3%81%97%E3%82%BB%E3%82%AF%E3%82%B7%E3%83%A3%E3%83%AB%E3%83%A9%E3%82%A4%E3%83%95-SAKURA.rar)
 
