--- a/_posts/2024-06-23-魔法の守護姫アルテミナsakura-14b.md
+++ b/_posts/2024-06-23-魔法の守護姫アルテミナsakura-14b.md
@@ -9,7 +9,7 @@ categories: AI translation
 
 请务必阅读文件中的README.md中的使用说明。如有运行问题 or bug反馈，请使用页面下方的邮箱联系我。
 
-## 机翻补丁文件：
+## 补丁文件：
 
 [魔法の守護姫アルテミナsakura-14b.rar](../resources/%E9%AD%94%E6%B3%95%E3%81%AE%E5%AE%88%E8%AD%B7%E5%A7%AB%E3%82%A2%E3%83%AB%E3%83%86%E3%83%9F%E3%83%8Asakura-14b.rar)
 
