--- a/_posts/2024-07-17-借金姉妹Sakura32b.md
+++ b/_posts/2024-07-17-借金姉妹Sakura32b.md
@@ -9,7 +9,7 @@ categories: AI translation
 
 请务必阅读文件中的README.md中的使用说明。如有运行问题 or bug反馈，请使用页面下方的邮箱联系我。
 
-## 机翻补丁文件：
+## 补丁文件：
 
 [借金姉妹Sakura32b.rar](../resources/%E5%80%9F%E9%87%91%E5%A7%89%E5%A6%B9Sakura32b.rar)
 
