--- a/_posts/2024-08-09-キスよりさきに恋よりはやくsakura32b.md
+++ b/_posts/2024-08-09-キスよりさきに恋よりはやくsakura32b.md
@@ -9,7 +9,7 @@ categories: AI translation
 
 请务必阅读文件中的README.md中的使用说明。如有运行问题 or bug反馈，请使用页面下方的邮箱联系我。
 
-## 机翻补丁文件：
+## 补丁文件：
 
 [キスよりさきに恋よりはやくsakura32b.rar](../resources/%E3%82%AD%E3%82%B9%E3%82%88%E3%82%8A%E3%81%95%E3%81%8D%E3%81%AB%E6%81%8B%E3%82%88%E3%82%8A%E3%81%AF%E3%82%84%E3%81%8Fsakura32b.rar)
 
