--- a/_posts/2024-09-16-ふたごえっち Step-2-16k.md
+++ b/_posts/2024-09-16-ふたごえっち Step-2-16k.md
@@ -9,7 +9,7 @@ categories: AI translation
 
 请务必阅读文件中的README.md中的使用说明。如有运行问题 or bug反馈，请使用页面下方的邮箱联系我。
 
-## 机翻补丁文件：
+## 补丁文件：
 
 [ふたごえっち Step-2-16k.rar](../resources/%E3%81%B5%E3%81%9F%E3%81%94%E3%81%88%E3%81%A3%E3%81%A1%20Step-2-16k.rar)
 
