--- a/_posts/2024-09-19-プリズム・ハート step-2-16k.md
+++ b/_posts/2024-09-19-プリズム・ハート step-2-16k.md
@@ -9,7 +9,7 @@ categories: AI translation
 
 请务必阅读文件中的README.md中的使用说明。如有运行问题 or bug反馈，请使用页面下方的邮箱联系我。
 
-## 机翻补丁文件：
+## 补丁文件：
 
 [プリズム・ハート step-2-16k.rar](../resources/%E3%83%97%E3%83%AA%E3%82%BA%E3%83%A0%E3%83%BB%E3%83%8F%E3%83%BC%E3%83%88%20step-2-16k.rar)
 
