--- a/_posts/2024-09-24-姫巫女gpt4o.md
+++ b/_posts/2024-09-24-姫巫女gpt4o.md
@@ -9,7 +9,7 @@ categories: AI translation
 
 请务必阅读文件中的README.md中的使用说明。如有运行问题 or bug反馈，请使用页面下方的邮箱联系我。
 
-## 机翻补丁文件：
+## 补丁文件：
 
 [姫巫女gpt4o_2.7z.001](../resources/%E5%A7%AB%E5%B7%AB%E5%A5%B3gpt4o_2.7z.001)
 
