--- a/_posts/2024-09-24-星降る夜のファルネーゼ gpt4o.md
+++ b/_posts/2024-09-24-星降る夜のファルネーゼ gpt4o.md
@@ -9,7 +9,7 @@ categories: AI translation
 
 请务必阅读文件中的README.md中的使用说明。如有运行问题 or bug反馈，请使用页面下方的邮箱联系我。
 
-## 机翻补丁文件：
+## 补丁文件：
 
 [星降る夜のファルネーゼ gpt4o.rar](../resources/%E6%98%9F%E9%99%8D%E3%82%8B%E5%A4%9C%E3%81%AE%E3%83%95%E3%82%A1%E3%83%AB%E3%83%8D%E3%83%BC%E3%82%BC%20gpt4o.rar)
 
