--- a/_posts/2024-09-25-空を飛ぶ、3つの方法。gpt4o.md
+++ b/_posts/2024-09-25-空を飛ぶ、3つの方法。gpt4o.md
@@ -9,7 +9,7 @@ categories: AI translation
 
 请务必阅读文件中的README.md中的使用说明。如有运行问题 or bug反馈，请使用页面下方的邮箱联系我。
 
-## 机翻补丁文件：
+## 补丁文件：
 
 [空を飛ぶ、3つの方法。gpt4o.rar](../resources/%E7%A9%BA%E3%82%92%E9%A3%9B%E3%81%B6%E3%80%813%E3%81%A4%E3%81%AE%E6%96%B9%E6%B3%95%E3%80%82gpt4o.rar)
 
