--- a/_posts/2024-12-03-星辰恋曲的白色永恒 FHD 汉化补丁移植.md
+++ b/_posts/2024-12-03-星辰恋曲的白色永恒 FHD 汉化补丁移植.md
@@ -10,7 +10,7 @@ categories: AI translation
 请务必阅读文件中的README.md中的使用说明。如有运行问题 or bug反馈，请使用页面下方的邮箱联系我。
 
 本补丁移植自xmoe汉化组的汉化补丁，适用于星辰恋曲的白色永恒FHD重制版。请遵守原汉化补丁的相关规定。
-- 20241203 修正了本体中的一处闪退bug；修正了本体和FD的字体，原本的字体显示时有点小问题。
+- 20241203 修正了本体中的一处闪退bug；修正了本体和FD的字体，原本的字体显示时有点小问题。因为f社引擎的原因，对脚本进行修改后，原本的存档点将无法使用。
 
 ## 补丁文件：
 
