--- a/_posts/2024-12-21-シロクロ ～色情症の幼馴染を世話することになった、彼女にナイショで～ gpt-4o.md
+++ b/_posts/2024-12-21-シロクロ ～色情症の幼馴染を世話することになった、彼女にナイショで～ gpt-4o.md
@@ -9,7 +9,7 @@ categories: AI translation
 
 请务必阅读文件中的README.md中的使用说明。如有运行问题 or bug反馈，请使用页面下方的邮箱联系我。
 
-
+- 20241222 修正了lua脚本中一些特殊符号引入的错误；修正了读档错误。
 
 ## 补丁文件：
 
