--- a/_posts/2024-12-31-望却のエディシウス gpt4o.md
+++ b/_posts/2024-12-31-望却のエディシウス gpt4o.md
@@ -13,7 +13,7 @@ categories: AI translation
 
 ## 补丁文件：
 
-[望却のエディシウス gpt4o机翻](../resources/望却のエディシウス gpt4o机翻.7z)
+[望却のエディシウス gpt4o机翻](../resources/望却のエディシウス gpt4o机翻.rar)
 
  
 
