--- a/_posts/2024-11-5-あやかし遊郭机翻笔记.markdown
+++ b/_posts/2024-11-5-あやかし遊郭机翻笔记.markdown
@@ -1,5 +1,5 @@
 ---
-permalink: /artical/あやかし遊郭 机翻笔记
+permalink: /artical/あやかし遊郭 机翻笔记/
 layout: post
 title:  "あやかし遊郭 机翻笔记"
 date: 2024-11-5 20:46:00 +0800
