--- a/_posts/2024-09-24-姫巫女gpt4o.md
+++ b/_posts/2024-09-24-姫巫女gpt4o.md
@@ -11,11 +11,11 @@ categories: AI translation
 
 ## 补丁文件：
 
-[姫巫女gpt4o_2.7z.001](../../resources/%E5%A7%AB%E5%B7%AB%E5%A5%B3gpt4o_2.7z.001)
+[姫巫女gpt4o_2.7z.001](https://github.com/jyxjyx1234/misc_game-chs/raw/re_upload/%E5%A7%AC%E5%B7%AB%E5%A5%B3/release/%E5%A7%AB%E5%B7%AB%E5%A5%B3gpt4o_2.7z.001)
 
  
 
-[姫巫女gpt4o_2.7z.002](../../resources/%E5%A7%AB%E5%B7%AB%E5%A5%B3gpt4o_2.7z.002)
+[姫巫女gpt4o_2.7z.002](https://github.com/jyxjyx1234/misc_game-chs/raw/re_upload/%E5%A7%AC%E5%B7%AB%E5%A5%B3/release/%E5%A7%AB%E5%B7%AB%E5%A5%B3gpt4o_2.7z.002)
 
  
 
