--- a/_posts/2025-8-31-流る星ふぁんでぃすく gemini-2.5-pro.md
+++ b/_posts/2025-8-31-流る星ふぁんでぃすく gemini-2.5-pro.md
@@ -2,14 +2,14 @@
 title: 流る星ふぁんでぃすく gemini-2.5-pro 机翻补丁
 layout: post
 permalink: /games/178/
-date: 2025-8-28 13:49:53 +0800
+date: 2025-8-31 11:38:53 +0800
 categories: AI translation
 ---
 
 
 请务必阅读文件中的README.md中的使用说明。如有运行问题 or bug反馈，请使用页面下方的邮箱联系我。
 
-
+- 20250831 修复了回想和后日谈无法触发的bug。
 
 ## 补丁文件：
 
